# secretflow

./: .antflake8  .bazeliskrc  .bazelrc  .clang-format  .coveragerc  .gitattributes  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  OWNERS  README.md  README.zh-CN.md  REPO_LAYOUT.md  SECURITY.md  VERSIONING.md  WORKSPACE  bazel_6.0.0-linux-x86  data_utils.py  dev-requirements.txt  fl_model.py  model.py  output.txt  pyproject.toml  pytest.ini  requirements.txt  run_pytest.sh  scaffold_optimizer.py  setup.py  test.py  test_svd.py  test_torch_backdoor.py
.circleci/: config.yml  continue-config.yml  release-config.yml  testpypi-config.yml
.github/: CODEOWNERS  pull_request_template.md
benchmark_examples/: README.md
docker/: .gitignore  README.md  comp_list.json  config_templates.yml  deploy_templates.yml  dev-requirements.txt  requirements.txt  secretflow-gpu.Dockerfile  secretflow_entrypoint.py  secretflow_entrypoint.sh  sf-gcc11-centos7-release.Dockerfile  sf-gcc11-ci.Dockerfile  sf-gpu.Dockerfile  translation.json  update_meta.py
docker/dev/: .gitignore  (+4 more)
docs/: CONTRIBUTING.md  Makefile  README.md  build.sh  build_mdx.sh  clean.py  conf.py  index.rst  make.bat  requirements.txt  sl_rec_deepfm.ipynb  update_data.sh  update_po.sh
examples/: README.md  env_test.py
examples/security/aigc/analysing_pii_leakage/: README.md  requirements.txt  setup.cfg  setup.py
examples/security/aigc/analysing_pii_leakage/configs/evaluate/: echr-gpt2-large-lora-pii-extraction.yml  echr-gpt2-large-lora-pii-inference.yml  echr-gpt2-large-lora-pii-reconstruction.yml  echr-gpt2-large-pii-extraction.yml  echr-gpt2-large-pii-inference.yml  echr-gpt2-large-pii-reconstruction.yml  echr-gpt2-small-lora-pii-extraction.yml  echr-gpt2-small-lora-pii-inference.yml  echr-gpt2-small-lora-pii-reconstruction.yml  echr-gpt2-small-pii-extraction.yml  echr-gpt2-small-pii-inference.yml  echr-gpt2-small-pii-reconstruction.yml  echr-llama3-lora-pii-extraction.yml  echr-llama3-lora-pii-inference.yml  echr-llama3-lora-pii-reconstruction.yml  echr-mistral-lora-pii-extraction.yml  echr-mistral-lora-pii-inference.yml  echr-mistral-lora-pii-reconstruction.yml  enron-gpt2-large-lora-pii-extraction.yml  enron-gpt2-large-lora-pii-inference.yml  enron-gpt2-large-lora-pii-reconstruction.yml  enron-gpt2-large-pii-extraction.yml  enron-gpt2-large-pii-inference.yml  enron-gpt2-large-pii-reconstruction.yml  enron-gpt2-small-pii-extraction.yml  enron-gpt2-small-pii-inference.yml  enron-gpt2-small-pii-reconstruction.yml  enron-llama3-lora-pii-extraction.yml  enron-llama3-lora-pii-inference.yml  enron-llama3-lora-pii-reconstruction.yml  enron-mistral-lora-pii-extraction.yml  enron-mistral-lora-pii-inference.yml  enron-mistral-lora-pii-reconstruction.yml
examples/security/aigc/analysing_pii_leakage/configs/fine-tune/: echr-gpt2-large-lora-undefended.yml  echr-gpt2-large-undefended.yml  echr-gpt2-small-lora-undefended.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml  echr-llama3-lora-undefended.yml  echr-mistral-lora-undefended.yml  enron-gpt2-large-lora-undefended.yml  enron-gpt2-large-undefended.yml  enron-gpt2-small-lora-undefended.yml  enron-gpt2-small-undefended.yml  enron-llama3-lora-undefended.yml  enron-mistral-lora-undefended.yml
examples/security/aigc/analysing_pii_leakage/configs/pii-extraction/: echr-gpt2-small-undefended.yml  enron-gpt2-small-undefended.yml  enron-mistral-lora-undefended.yml
examples/security/aigc/analysing_pii_leakage/configs/pii-inference/: echr-gpt2-small-undefended.yml  enron-gpt2-small-undefended.yml  enron-mistral-lora-undefended.yml
examples/security/aigc/analysing_pii_leakage/configs/pii-reconstruction/: echr-gpt2-small-undefended.yml  enron-gpt2-small-undefended.yml  enron-mistral-lora-undefended.yml
examples/security/aigc/analysing_pii_leakage/examples/: evaluate.py  extract_pii.py  fine_tune.py  reconstruct_pii.py
examples/security/aigc/analysing_pii_leakage/src/: global_configs.py  local_configs.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/: global_configs.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/arguments/: attack_args.py  config_args.py  dataset_args.py  env_args.py  evaluation_args.py  model_args.py  ner_args.py  outdir_args.py  peft_args.py  privacy_args.py  sampling_args.py  trainer_args.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/attacks/: attack_factory.py  privacy_attack.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/attacks/extraction/: naive_extraction.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/attacks/inference/: diff_perpexity_inference.py  perpexity_inference.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/attacks/reconstruction/: diff_perplexity_reconstruction.py  icl_perplexity_reconstruction.py  perplexity_reconstruction.py  substring_perplexity_reconstruction.py  zlib_perplexity_reconstruction.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/dataset/: dataset.py  dataset_factory.py  generated_dataset.py  real_dataset.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/models/: gpt2.py  language_model.py  llama.py  mistral.py  model_factory.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/ner/: fill_masks.py  flair_tagger.py  pii_results.py  tagger.py  tagger_factory.py
examples/security/aigc/analysing_pii_leakage/src/pii_leakage/utils/: callbacks.py  output.py  python_helper.py  random.py  set_ops.py  web.py
oscp/: bst_torch.py
secretflow/: __init__.py  cli.py  version.py
secretflow_fl/: __init__.py
secretflow_lib/binding/: BUILD.bazel  binding.cc  binding.h  exported_symbols.lds  random.cc  random_test.py  version_script.lds
secretflow_lib/differential_privacy/random/: BUILD.bazel  distributions.h  distributions_test.cc
tests/: basecase.py  cluster.py  conftest.py  load.py  main.py  sf_config.py  sf_fixtures.py  sf_services.py  test_torch_backdoor.py
(+3109 files in other folders)
