[project]
authors = [
  {name = "SecretFlow developers", email = "secretflow-contact@service.alipay.com"},
]
dependencies = [
  "certifi>=2023.7.22",
  "clean-text>=0.6.0",
  "click>=8.1.7",
  "grpcio==1.56.2",
  "jax[cpu]>=0.4.16",
  "jaxlib>=0.4.16",
  "multiprocess>=0.70.16",
  "numba==0.57.0",
  "numpy>=1.21,<1.25",
  "pandas==1.5.3",
  "tabulate>=0.9.0",
  "protobuf>=4, <5",
  "pyarrow==14.0.2",
  "ray==2.9.1",
  "s3fs==2024.2.0",
  "scikit-learn==1.3.2", # below are first party dependencies
  "spu==0.9.0.dev20240321",
  "sf-heu==0.5.0.b0",
  "kuscia==0.0.2.dev240320",
  "interconnection==0.2.0.dev0",
  "secretflow-rayfed==0.2.1a1",
  "secretflow_serving_lib==0.3.0.dev20240320",
]
description = "A unified framework for privacy-preserving machine learning and data analysis."
dynamic = ["version"]
license.file = "LICENSE"
name = "secretflow"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/secretflow/secretflow"

[project.optional-dependencies]
dev = [
  "build",
  "black>=24.3.0",
  "isort>=5.13.2",
  "matplotlib",
  "statsmodels==0.13.2",
  "polars==0.19.3",
  "pytest==7.3.1",
  "pytest-cov==4.0.0",
  "pytest-xdist==3.2.1",
  "pytest-testmon==2.0.6",
  "pytest-custom_exit_code",
  'sdc-apis; platform_machine == "x86_64"',
  'sdc-sdk; platform_machine == "x86_64"',
]
full = [
  "networkx==2.8.8",
  "sparse>=0.14.0",
  'tensorflow-macos>=2.12,<2.13; platform_system == "Darwin"',
  'tensorflow>=2.12,<2.13; platform_system != "Darwin"',
  "tf2onnx>=1.13.0",
  "tqdm",
  "validator.py==1.3.0",
  "xgboost==1.7.5",
  "torch==2.1.2",
  "torchmetrics==1.3.2",
  "torchvision==0.16.2",
  "torchaudio==2.1.2",
]

[project.scripts]
secretflow = "secretflow.cli:cli"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65", "setuptools_scm>=8"]

[tool.rye]
managed = true

[tool.black]
extend-exclude = '''.*_pb2.py'''
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.setuptools_scm]
