# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "_lib",
    srcs = [
        "binding.cc",
        "binding.h",
        "random.cc",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //secretflow_lib/binding:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //secretflow_lib/binding:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "//secretflow_lib/differential_privacy/random:distributions",
    ],
)

py_library(
    name = "binding",
    data = [":_lib.so"],
)

py_test(
    name = "random_test",
    srcs = ["random_test.py"],
    deps = ["binding"],
)
