package(default_visibility = ["//visibility:public"])

cc_library(
    name = "distributions",
    hdrs = ["distributions.h"],
    deps = [
        "@yasl//yasl/base:exception",
        "@yasl//yasl/crypto:pseudo_random_generator",
    ],
)

cc_test(
    name = "distributions_test",
    srcs = ["distributions_test.cc"],
    linkopts = ["-lm"],
    deps = [
        ":distributions",
        "@com_github_gperftools_gperftools//:gperftools",
        "@com_google_googletest//:gtest_main",
        "@yasl//yasl/crypto:pseudo_random_generator",
    ],
)
