package(default_visibility = ["//visibility:public"])

cc_library(
    name = "distributions",
    hdrs = ["distributions.h"],
    deps = [
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

cc_test(
    name = "distributions_test",
    srcs = ["distributions_test.cc"],
    linkopts = ["-lm"],
    deps = [
        ":distributions",
        "@com_github_gperftools_gperftools//:gperftools",
        "@com_google_googletest//:gtest_main",
        "@yacl//yacl/crypto/tools:prg",
    ],
)
