load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "distributions",
    hdrs = ["distributions.h"],
    deps = [
        "@yacl//yacl/base:exception",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

yacl_cc_test(
    name = "distributions_test",
    srcs = ["distributions_test.cc"],
    linkopts = [
        "-lm",
        "-ldl",
    ],
    deps = [
        ":distributions",
        "@yacl//yacl/crypto/tools:prg",
    ],
)
