[metadata]
    name        = pii-leakage
    version     = 0.1.1
    description = Modified analyzing PII leakage in LMs 
    url         = https://github.com/p1kachuu/analysing_pii_leakage

[options]
package_dir=
    =src
packages=find:
install_requires = 
    torch>=1.10,<2.0
    transformers
    accelerate
    datasets
    deepspeed
    deepspeed_mii
    flash_attn
    huggingface_hub
    nltk
    peft
    tqdm
    trl
    flair @ git+https://github.com/flairNLP/flair
    dp_transformers @ git+https://github.com/microsoft/dp-transformers.git@main#egg=dp_transformers
    opacus

[options.packages.find]
where=src
